# sequentialgesturerecognitionROS2

./: README.md
src/gr_sequence/: package.xml  setup.cfg  setup.py
src/gr_sequence/gr_sequence/: gesture_sequence.py
src/gr_sequence_msgs/: CMakeLists.txt  package.xml
src/gr_sequence_msgs/msg/: Sequence.msg
