<?xml version="1.0"?>
<package format="3">
  <name>gr_sequence</name>
  <version>0.0.0</version>
  <description>Mediapipe based ROS2 gesture sequence recognition</description>
  <maintainer email="polkky@todo.todo">polkky</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gr_sequence_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
